# NeuroTS

./: .auto-changelog  .auto-changelog-template.hbs  .codespellignorelines  .codespellrc  .copier-answers.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  commitlint.config.js  package.json  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.binder/: postBuild  requirements.txt
.github/: dependabot.yml  pull_request_template.md
doc/: Makefile
examples/: README.rst  explore_example_results.ipynb  extract_synthesis_inputs.py  fix_diameters.py  generate_cell.py  generate_cell_default.py  generate_cell_external_diametrizer.py  generate_diameters.py  generate_population.py  input_distributions_persistence.py  modify_input.py  synthesize_neuron.py  synthesize_neuron_external_diameter.py  synthesize_neuron_with_diameters.py  synthesize_neurons.py  synthesize_single_neuron.py  synthesize_single_neuron_y_direction.py
modifier/: functions.py
neurots/: __init__.py  basic.py  morphio_utils.py  utils.py  validator.py  version.py
schemas/: distributions.json
test_data/: diam_simple.swc  diam_simple_axon.swc  simple.swc
tests/: __init__.py  bio_distribution.json  bio_path_params.json  bio_radial_params.json  dummy_distribution.json  dummy_neuron.asc  dummy_params.json  test_algo.py  test_diametrizer.py  test_examples.py  test_extract_input.py  test_generate_section.py  test_generate_tree.py  test_json_schema.py  test_morphmath_bifurcation.py  test_morphmath_point_array.py  test_morphmath_random_tree.py  test_morphmath_utils.py  test_neuron_functional.py  test_neuron_grower.asc  test_neuron_grower.py  test_orientations.py  test_point_cloud.py  test_point_grid.py  test_preprocess.py  test_rotation.py  test_sample.py  test_soma.py  test_soma_grower.py  test_utils.py  utils.py  (+3 more)
(+209 files in other folders)
